--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,9 @@ MINOR:
 MEDIUM:
 
 MAJOR:
-    - set up server client architecture so they can all spawn stuff
-    - then add in nuance in client side
+    - set up so players start out with like 100 cells, and implement the leaderboard
+    - set up remove planned cells during planning 
+    - clean and debug stuff 
+    - start screen
 
 COMPLETED:
