--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ MEDIUM:
 
 MAJOR:
     - set up so players start out with like 100 cells, and implement the leaderboard
+    - implement game over / restart
     - set up remove planned cells during planning 
     - clean and debug stuff 
     - start screen
