--- a/TODO.txt
+++ b/TODO.txt
@@ -3,10 +3,11 @@ MINOR:
 MEDIUM:
 
 MAJOR:
-    - set up so players start out with like 100 cells, and implement the leaderboard
     - implement game over / restart
+    - add configurable bounds and infinite bounds as in cells will loop back to the other side upon reaching an edge
     - set up remove planned cells during planning 
     - clean and debug stuff 
     - start screen
 
 COMPLETED:
+    - set up so players start out with like 100 cells, and implement the leaderboard
