--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@ MAJOR:
     - implement game over / restart
     - add configurable bounds and infinite bounds as in cells will loop back to the other side upon reaching an edge
     - set up remove planned cells during planning 
-    - clean and debug stuff 
+    - clean and debug stuff - maybe make ui colored cells with a lowered alpha  
     - start screen
 
 COMPLETED:
