--- a/TODO.txt
+++ b/TODO.txt
@@ -3,9 +3,8 @@ MINOR:
 MEDIUM:
 
 MAJOR:
-    - on player join send entire map to accomdate static stuff
-    - when cells get added to server send them to rest of clients
     - ui be more interactable like hover stuff
+    - copy/paste
 
 COMPLETED:
     - add configurable bounds and infinite bounds as in cells will loop back to the other side upon reaching an edge
@@ -15,3 +14,5 @@ COMPLETED:
     - disconnect unresponsive clients
     - set up remove planned cells during planning 
     - clean and debug stuff - maybe make ui colored cells with a lowered alpha  
+    - on player join send entire map to accomdate static stuff
+    - when cells get added to server send them to rest of clients
